contrib/python/pypdfium2/pypdfium2_raw/bindings.py

R"""
Auto-generated by:
ctypesgen -l pdfium --rt-libpaths './{prefix}{name}.{suffix}' --no-system-libsearch --no-load-library --no-macro-guards --no-symbol-guards -D _WIN32 -I '~/work/pypdfium2/pypdfium2/utils/spoof' --symbol-rules 'if_needed=\w+_$|\w+_t$|_\w+' --headers fpdf_annot.h fpdf_attachment.h fpdf_catalog.h fpdf_dataavail.h fpdf_doc.h fpdf_edit.h fpdf_ext.h fpdf_flatten.h fpdf_formfill.h fpdf_fwlevent.h fpdf_javascript.h fpdf_ppo.h fpdf_progressive.h fpdf_save.h fpdf_searchex.h fpdf_signature.h fpdf_structtree.h fpdf_sysfontinfo.h fpdf_text.h fpdf_thumbnail.h fpdf_transformpage.h fpdfview.h -o '~/work/pypdfium2/pypdfium2/data/bindings/bindings.py'
"""

import ctypes
from ctypes import *


# -- Begin library loader --

import sys
import ctypes
import ctypes.util
import os.path
import pathlib

if sys.platform.startswith(("win32", "cygwin", "msys")):
    _LIB_PREFIX, _LIB_SUFFIX = "", "dll"
elif sys.platform.startswith(("darwin", "ios")):
    _LIB_PREFIX, _LIB_SUFFIX = "lib", "dylib"
else:  # assume unix-like naming pattern
    _LIB_PREFIX, _LIB_SUFFIX = "lib", "so"

def _get_library(name, dllclass, libpaths, search_sys):
    
    for lpath in libpaths:
        if os.path.dirname(lpath):
            lpath = pathlib.Path(lpath)
            if not lpath.is_absolute():
                lpath = (pathlib.Path(__file__).parent / lpath).resolve(strict=False)
            lpath = lpath.parent / lpath.name.format(prefix=_LIB_PREFIX, name=name, suffix=_LIB_SUFFIX)
            if lpath.exists():
                return dllclass(str(lpath))
        else:
            try:
                return dllclass(lpath)
            except OSError:
                pass
    
    lpath = ctypes.util.find_library(name) if search_sys else None
    if not lpath:
        raise ImportError(f"Could not find library {name!r} (libpaths={libpaths}, search_sys={search_sys})")
    
    return dllclass(lpath)

_libs = {}

# -- End library loader --


# -- Begin templates --

# AOTW, ctypes does not support non-primitive result types in callbacks,
# so we remap custom pointer types to unchecked c_void_p.
def UNCHECKED(t):
    if hasattr(t, "_type_") and not isinstance(t._type_, str):
        return ctypes.c_void_p
    else:
        return t

# -- End templates --


# Load library 'pdfium'

_libs['pdfium'] = _get_library(
    name = 'pdfium',
    dllclass = ctypes.CDLL,
    libpaths = ('./{prefix}{name}.{suffix}',),
    search_sys = True,
)


# -- Begin header members --

# ~/work/pypdfium2/pypdfium2/utils/spoof/windows.h: 22
HDC = POINTER(None)

# ./fpdfview.h: 49
enum_anon_2 = c_int

# ./fpdfview.h: 49
FPDF_TEXTRENDERMODE_UNKNOWN = (-1)

# ./fpdfview.h: 49
FPDF_TEXTRENDERMODE_FILL = 0

# ./fpdfview.h: 49
FPDF_TEXTRENDERMODE_STROKE = 1

# ./fpdfview.h: 49
FPDF_TEXTRENDERMODE_FILL_STROKE = 2

# ./fpdfview.h: 49
FPDF_TEXTRENDERMODE_INVISIBLE = 3

# ./fpdfview.h: 49
FPDF_TEXTRENDERMODE_FILL_CLIP = 4

# ./fpdfview.h: 49
FPDF_TEXTRENDERMODE_STROKE_CLIP = 5

# ./fpdfview.h: 49
FPDF_TEXTRENDERMODE_FILL_STROKE_CLIP = 6

# ./fpdfview.h: 49
FPDF_TEXTRENDERMODE_CLIP = 7

# ./fpdfview.h: 49
FPDF_TEXTRENDERMODE_LAST = FPDF_TEXTRENDERMODE_CLIP

# ./fpdfview.h: 49
FPDF_TEXT_RENDERMODE = enum_anon_2

# ./fpdfview.h: 52
class struct_fpdf_action_t__ (Structure):
    pass

# ./fpdfview.h: 52
FPDF_ACTION = POINTER(struct_fpdf_action_t__)

# ./fpdfview.h: 53
class struct_fpdf_annotation_t__ (Structure):
    pass

# ./fpdfview.h: 53
FPDF_ANNOTATION = POINTER(struct_fpdf_annotation_t__)

# ./fpdfview.h: 54
class struct_fpdf_attachment_t__ (Structure):
    pass

# ./fpdfview.h: 54
FPDF_ATTACHMENT = POINTER(struct_fpdf_attachment_t__)

# ./fpdfview.h: 55
class struct_fpdf_avail_t__ (Structure):
    pass

# ./fpdfview.h: 55
FPDF_AVAIL = POINTER(struct_fpdf_avail_t__)

# ./fpdfview.h: 56
class struct_fpdf_bitmap_t__ (Structure):
    pass

# ./fpdfview.h: 56
FPDF_BITMAP = POINTER(struct_fpdf_bitmap_t__)

# ./fpdfview.h: 57
class struct_fpdf_bookmark_t__ (Structure):
    pass

# ./fpdfview.h: 57
FPDF_BOOKMARK = POINTER(struct_fpdf_bookmark_t__)

# ./fpdfview.h: 58
class struct_fpdf_clippath_t__ (Structure):
    pass

# ./fpdfview.h: 58
FPDF_CLIPPATH = POINTER(struct_fpdf_clippath_t__)

# ./fpdfview.h: 59
class struct_fpdf_dest_t__ (Structure):
    pass

# ./fpdfview.h: 59
FPDF_DEST = POINTER(struct_fpdf_dest_t__)

# ./fpdfview.h: 60
class struct_fpdf_document_t__ (Structure):
    pass

# ./fpdfview.h: 60
FPDF_DOCUMENT = POINTER(struct_fpdf_document_t__)

# ./fpdfview.h: 61
class struct_fpdf_font_t__ (Structure):
    pass

# ./fpdfview.h: 61
FPDF_FONT = POINTER(struct_fpdf_font_t__)

# ./fpdfview.h: 62
class struct_fpdf_form_handle_t__ (Structure):
    pass

# ./fpdfview.h: 62
FPDF_FORMHANDLE = POINTER(struct_fpdf_form_handle_t__)

# ./fpdfview.h: 63
class struct_fpdf_glyphpath_t__ (Structure):
    pass

# ./fpdfview.h: 63
FPDF_GLYPHPATH = POINTER(struct_fpdf_glyphpath_t__)

# ./fpdfview.h: 64
class struct_fpdf_javascript_action_t (Structure):
    pass

# ./fpdfview.h: 64
FPDF_JAVASCRIPT_ACTION = POINTER(struct_fpdf_javascript_action_t)

# ./fpdfview.h: 65
class struct_fpdf_link_t__ (Structure):
    pass

# ./fpdfview.h: 65
FPDF_LINK = POINTER(struct_fpdf_link_t__)

# ./fpdfview.h: 66
class struct_fpdf_page_t__ (Structure):
    pass

# ./fpdfview.h: 66
FPDF_PAGE = POINTER(struct_fpdf_page_t__)

# ./fpdfview.h: 67
class struct_fpdf_pagelink_t__ (Structure):
    pass

# ./fpdfview.h: 67
FPDF_PAGELINK = POINTER(struct_fpdf_pagelink_t__)

# ./fpdfview.h: 68
class struct_fpdf_pageobject_t__ (Structure):
    pass

# ./fpdfview.h: 68
FPDF_PAGEOBJECT = POINTER(struct_fpdf_pageobject_t__)

# ./fpdfview.h: 69
class struct_fpdf_pageobjectmark_t__ (Structure):
    pass

# ./fpdfview.h: 69
FPDF_PAGEOBJECTMARK = POINTER(struct_fpdf_pageobjectmark_t__)

# ./fpdfview.h: 70
class struct_fpdf_pagerange_t__ (Structure):
    pass

# ./fpdfview.h: 70
FPDF_PAGERANGE = POINTER(struct_fpdf_pagerange_t__)

# ./fpdfview.h: 71
class struct_fpdf_pathsegment_t (Structure):
    pass

# ./fpdfview.h: 71
FPDF_PATHSEGMENT = POINTER(struct_fpdf_pathsegment_t)

# ./fpdfview.h: 72
class struct_fpdf_schhandle_t__ (Structure):
    pass

# ./fpdfview.h: 72
FPDF_SCHHANDLE = POINTER(struct_fpdf_schhandle_t__)

# ./fpdfview.h: 73
class struct_fpdf_signature_t__ (Structure):
    pass

# ./fpdfview.h: 73
FPDF_SIGNATURE = POINTER(struct_fpdf_signature_t__)

# ./fpdfview.h: 74
FPDF_SKIA_CANVAS = POINTER(None)

# ./fpdfview.h: 75
class struct_fpdf_structelement_t__ (Structure):
    pass

# ./fpdfview.h: 75
FPDF_STRUCTELEMENT = POINTER(struct_fpdf_structelement_t__)

# ./fpdfview.h: 76
class struct_fpdf_structelement_attr_t__ (Structure):
    pass

# ./fpdfview.h: 76
FPDF_STRUCTELEMENT_ATTR = POINTER(struct_fpdf_structelement_attr_t__)

# ./fpdfview.h: 77
class struct_fpdf_structelement_attr_value_t__ (Structure):
    pass

# ./fpdfview.h: 77
FPDF_STRUCTELEMENT_ATTR_VALUE = POINTER(struct_fpdf_structelement_attr_value_t__)

# ./fpdfview.h: 79
class struct_fpdf_structtree_t__ (Structure):
    pass

# ./fpdfview.h: 79
FPDF_STRUCTTREE = POINTER(struct_fpdf_structtree_t__)

# ./fpdfview.h: 80
class struct_fpdf_textpage_t__ (Structure):
    pass

# ./fpdfview.h: 80
FPDF_TEXTPAGE = POINTER(struct_fpdf_textpage_t__)

# ./fpdfview.h: 81
class struct_fpdf_widget_t__ (Structure):
    pass

# ./fpdfview.h: 81
FPDF_WIDGET = POINTER(struct_fpdf_widget_t__)

# ./fpdfview.h: 82
class struct_fpdf_xobject_t__ (Structure):
    pass

# ./fpdfview.h: 82
FPDF_XOBJECT = POINTER(struct_fpdf_xobject_t__)

# ./fpdfview.h: 85
FPDF_BOOL = c_int

# ./fpdfview.h: 86
FPDF_RESULT = c_int

# ./fpdfview.h: 87
FPDF_DWORD = c_ulong

# ./fpdfview.h: 88
FS_FLOAT = c_float

# ./fpdfview.h: 96
enum__FPDF_DUPLEXTYPE_ = c_int

# ./fpdfview.h: 96
DuplexUndefined = 0

# ./fpdfview.h: 96
Simplex = (DuplexUndefined + 1)

# ./fpdfview.h: 96
DuplexFlipShortEdge = (Simplex + 1)

# ./fpdfview.h: 96
DuplexFlipLongEdge = (DuplexFlipShortEdge + 1)

# ./fpdfview.h: 96
FPDF_DUPLEXTYPE = enum__FPDF_DUPLEXTYPE_

# ./fpdfview.h: 99
FPDF_WCHAR = c_ushort

# ./fpdfview.h: 105
FPDF_BYTESTRING = POINTER(c_char)

# ./fpdfview.h: 109
FPDF_WIDESTRING = POINTER(FPDF_WCHAR)

# ./fpdfview.h: 117
class struct_FPDF_BSTR_ (Structure):
    __slots__ = ('str', 'len')

struct_FPDF_BSTR_._fields_ = (
    ('str', POINTER(c_char)),
    ('len', c_int),
)

# ./fpdfview.h: 117
FPDF_BSTR = struct_FPDF_BSTR_

# ./fpdfview.h: 136
FPDF_STRING = POINTER(c_char)

# ./fpdfview.h: 153
class struct__FS_MATRIX_ (Structure):
    __slots__ = ('a', 'b', 'c', 'd', 'e', 'f')

struct__FS_MATRIX_._fields_ = (
    ('a', c_float),
    ('b', c_float),
    ('c', c_float),
    ('d', c_float),
    ('e', c_float),
    ('f', c_float),
)

# ./fpdfview.h: 153
FS_MATRIX = struct__FS_MATRIX_

# ./fpdfview.h: 156
class struct__FS_RECTF_ (Structure):
    __slots__ = ('left', 'top', 'right', 'bottom')

struct__FS_RECTF_._fields_ = (
    ('left', c_float),
    ('top', c_float),
    ('right', c_float),
    ('bottom', c_float),
)

# ./fpdfview.h: 165
FS_LPRECTF = POINTER(struct__FS_RECTF_)

# ./fpdfview.h: 165
FS_RECTF = struct__FS_RECTF_

# ./fpdfview.h: 168
FS_LPCRECTF = POINTER(FS_RECTF)

# ./fpdfview.h: 171
class struct_FS_SIZEF_ (Structure):
    __slots__ = ('width', 'height')

struct_FS_SIZEF_._fields_ = (
    ('width', c_float),
    ('height', c_float),
)

# ./fpdfview.h: 174
FS_LPSIZEF = POINTER(struct_FS_SIZEF_)

# ./fpdfview.h: 174
FS_SIZEF = struct_FS_SIZEF_

# ./fpdfview.h: 177
FS_LPCSIZEF = POINTER(FS_SIZEF)

# ./fpdfview.h: 180
class struct_FS_POINTF_ (Structure):
    __slots__ = ('x', 'y')

struct_FS_POINTF_._fields_ = (
    ('x', c_float),
    ('y', c_float),
)

# ./fpdfview.h: 183
FS_LPPOINTF = POINTER(struct_FS_POINTF_)

# ./fpdfview.h: 183
FS_POINTF = struct_FS_POINTF_

# ./fpdfview.h: 186
FS_LPCPOINTF = POINTER(FS_POINTF)

# ./fpdfview.h: 197
class struct__FS_QUADPOINTSF (Structure):
    __slots__ = ('x1', 'y1', 'x2', 'y2', 'x3', 'y3', 'x4', 'y4')

struct__FS_QUADPOINTSF._fields_ = (
    ('x1', FS_FLOAT),
    ('y1', FS_FLOAT),
    ('x2', FS_FLOAT),
    ('y2', FS_FLOAT),
    ('x3', FS_FLOAT),
    ('y3', FS_FLOAT),
    ('x4', FS_FLOAT),
    ('y4', FS_FLOAT),
)

# ./fpdfview.h: 197
FS_QUADPOINTSF = struct__FS_QUADPOINTSF

# ./fpdfview.h: 200
FPDF_ANNOTATION_SUBTYPE = c_int

# ./fpdfview.h: 201
FPDF_ANNOT_APPEARANCEMODE = c_int

# ./fpdfview.h: 204
FPDF_OBJECT_TYPE = c_int

# ./fpdfview.h: 244
enum_anon_3 = c_int

# ./fpdfview.h: 244
FPDF_RENDERERTYPE_AGG = 0

# ./fpdfview.h: 244
FPDF_RENDERERTYPE_SKIA = 1

# ./fpdfview.h: 244
FPDF_RENDERER_TYPE = enum_anon_3

# ./fpdfview.h: 283
class struct_FPDF_LIBRARY_CONFIG_ (Structure):
    __slots__ = ('version', 'm_pUserFontPaths', 'm_pIsolate', 'm_v8EmbedderSlot', 'm_pPlatform', 'm_RendererType')

struct_FPDF_LIBRARY_CONFIG_._fields_ = (
    ('version', c_int),
    ('m_pUserFontPaths', POINTER(POINTER(c_char))),
    ('m_pIsolate', POINTER(None)),
    ('m_v8EmbedderSlot', c_uint),
    ('m_pPlatform', POINTER(None)),
    ('m_RendererType', FPDF_RENDERER_TYPE),
)

# ./fpdfview.h: 283
FPDF_LIBRARY_CONFIG = struct_FPDF_LIBRARY_CONFIG_

# ./fpdfview.h: 295
FPDF_InitLibraryWithConfig = _libs['pdfium']['FPDF_InitLibraryWithConfig']
FPDF_InitLibraryWithConfig.argtypes = (POINTER(FPDF_LIBRARY_CONFIG), )
FPDF_InitLibraryWithConfig.restype = None

# ./fpdfview.h: 308
FPDF_InitLibrary = _libs['pdfium']['FPDF_InitLibrary']
FPDF_InitLibrary.argtypes = ()
FPDF_InitLibrary.restype = None

# ./fpdfview.h: 324
FPDF_DestroyLibrary = _libs['pdfium']['FPDF_DestroyLibrary']
FPDF_DestroyLibrary.argtypes = ()
FPDF_DestroyLibrary.restype = None

# ./fpdfview.h: 337
FPDF_SetSandBoxPolicy = _libs['pdfium']['FPDF_SetSandBoxPolicy']
FPDF_SetSandBoxPolicy.argtypes = (FPDF_DWORD, FPDF_BOOL)
FPDF_SetSandBoxPolicy.restype = None

# ./fpdfview.h: 391
FPDF_LoadDocument = _libs['pdfium']['FPDF_LoadDocument']
FPDF_LoadDocument.argtypes = (FPDF_STRING, FPDF_BYTESTRING)
FPDF_LoadDocument.restype = FPDF_DOCUMENT
